# magic_bean

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
include/: abstract_sequencer.h  alert_exception.h  batch_event_processor.h  blocking_wait_strategy.h  busy_spin_wait_strategy.h  cursored.h  data_provider.h  event_factory.h  event_handler.h  event_poller.h  event_processor.h  event_translator.h  event_translator_one_arg.h  insufficient_capacity_exception.h  magic_types.h  sequence.h  (+11 more)
perf/: CMakeLists.txt  abstract_perf_test_disruptor.cc  abstract_perf_test_disruptor.h
perf/immutable/: constants.h
perf/raw/: CMakeLists.txt  one_to_one_raw_batch_throughput_test.cc  one_to_one_raw_batch_throughput_test.h  one_to_one_raw_throughput_test.cc  one_to_one_raw_throughput_test.h
perf/sequenced/: one_to_one_sequenced_batch_throughput_test.cc  one_to_one_sequenced_batch_throughput_test.h  one_to_one_sequenced_poller_throughput_test.cc  one_to_one_sequenced_poller_throughput_test.h  one_to_one_sequenced_throughput_test.cc  one_to_one_sequenced_throughput_test.h  one_to_three_diamond_sequenced_throughput_test.cc  one_to_three_diamond_sequenced_throughput_test.h  one_to_three_pipeline_sequenced_throughput_test.cc  one_to_three_pipeline_sequenced_throughput_test.h  one_to_three_sequenced_throughput_test.cc  one_to_three_sequenced_throughput_test.h  three_to_one_sequenced_batch_throughput_test.cc  three_to_one_sequenced_batch_throughput_test.h  three_to_one_sequenced_throughput_test.cc  three_to_one_sequenced_throughput_test.h  three_to_three_sequenced_throughput_test.cc  three_to_three_sequenced_throughput_test.h
perf/support/: fizz_buzz_event.h  fizz_buzz_event_handler.h  function_event.h  function_event_handler.h  long_array_event_handler.h  long_array_publisher.h  multi_buffer_batch_event_processor.h  mutable_long.h  padded_long.h  perf_test_util.h  value_addition_event_handler.h  value_batch_publisher.h  value_event.h  value_mutation_event_handler.h  value_publisher.h
src/: CMakeLists.txt  abstract_sequencer.cc  alert_exception.h  blocking_wait_strategy.cc  busy_spin_wait_strategy.cc  fixed_sequence_group.cc  fixed_sequence_group.h  multi_producer_sequencer.cc  no_op_event_processor.cc  processing_sequence_barrier.cc  processing_sequence_barrier.h  sequence.cc  sequence_barrier.h  sequence_groups.cc  single_producer_sequencer.cc  timeout_exception.h  util.cc  util.h  yielding_wait_strategy.cc  yielding_wait_strategy.h
test/: CMakeLists.txt  test_batch_event_processor.cc  test_event_poller.cc  test_ring_buffer.cc  test_sequencer.cc
test/support/: stub_event.h
