include_directories(${PROJECT_SOURCE_DIR}/include)
set(SRC sequence.cc processing_sequence_barrier.cc yielding_wait_strategy.cc blocking_wait_strategy.cc abstract_sequencer.cc single_producer_sequencer.cc util.cc)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/..)
add_library(libmagic SHARED ${SRC})
set_target_properties(libmagic PROPERTIES OUTPUT_NAME "magic")
